--- a/index.ipynb
+++ b/index.ipynb
@@ -56,11 +56,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "200\n"
+     ]
+    }
+   ],
    "source": [
-    "# You Code Here"
+    "import requests\n",
+    "response = requests.get(\"http://api.open-notify.org/iss-now.json\")\n",
+    "print(response.status_code)"
    ]
   },
   {
@@ -81,11 +91,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\"iss_position\": {\"latitude\": \"15.5074\", \"longitude\": \"-9.7760\"}, \"timestamp\": 1561559334, \"message\": \"success\"}\n"
+     ]
+    }
+   ],
    "source": [
-    "# You Code Here"
+    "print(response.text)"
    ]
   },
   {
@@ -108,11 +126,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "400\n"
+     ]
+    }
+   ],
    "source": [
-    "# You Code Here"
+    "# You Code Here\n",
+    "# Make a get request to get the latest position of the international space station from the opennotify api.\n",
+    "response = requests.get(\"http://api.open-notify.org/iss-pass.json\")\n",
+    "\n",
+    "# Print the status code of the response.\n",
+    "print(response.status_code)"
    ]
   },
   {
@@ -150,18 +181,77 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "200\n",
+      "{'Server': 'nginx/1.10.3', 'Date': 'Wed, 26 Jun 2019 14:30:37 GMT', 'Content-Type': 'application/json', 'Content-Length': '519', 'Connection': 'keep-alive', 'Via': '1.1 vegur'}\n",
+      "{\n",
+      "  \"message\": \"success\", \n",
+      "  \"request\": {\n",
+      "    \"altitude\": 100, \n",
+      "    \"datetime\": 1561559437, \n",
+      "    \"latitude\": 40.71, \n",
+      "    \"longitude\": -74.0, \n",
+      "    \"passes\": 5\n",
+      "  }, \n",
+      "  \"response\": [\n",
+      "    {\n",
+      "      \"duration\": 627, \n",
+      "      \"risetime\": 1561563892\n",
+      "    }, \n",
+      "    {\n",
+      "      \"duration\": 622, \n",
+      "      \"risetime\": 1561569693\n",
+      "    }, \n",
+      "    {\n",
+      "      \"duration\": 199, \n",
+      "      \"risetime\": 1561575652\n",
+      "    }, \n",
+      "    {\n",
+      "      \"duration\": 504, \n",
+      "      \"risetime\": 1561624066\n",
+      "    }, \n",
+      "    {\n",
+      "      \"duration\": 645, \n",
+      "      \"risetime\": 1561629765\n",
+      "    }\n",
+      "  ]\n",
+      "}\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
-    "# You Code Here"
+    "# Set up the parameters we want to pass to the API.\n",
+    "# This is the latitude and longitude of New York City.\n",
+    "parameters = {\"lat\": 40.71, \"lon\": -74}\n",
+    "\n",
+    "# Make a get request with the parameters.\n",
+    "response = requests.get(\"http://api.open-notify.org/iss-pass.json\", params=parameters)\n",
+    "print(response.status_code)\n",
+    "\n",
+    "# Print the content of the response (the data the server returned)\n",
+    "print(dict(response.headers))\n",
+    "print(response.text)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Check the API and interpret your results - when will ISS pass over NEW York next ?"
+    "# Check the API and interpret your results - when will ISS pass over NEW York next ?\n",
+    "# Get the response from the API endpoint.\n",
+    "response = requests.get(\"http://api.open-notify.org/astros.json\")\n",
+    "data = response.json()\n",
+    "\n",
+    "# 9 people are currently in space.\n",
+    "print(data[\"number\"])\n",
+    "print(dict(data))"
    ]
   },
   {
@@ -223,7 +313,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
