Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -187,7 +187,7 @@
      "output_type": "stream",
      "text": [
       "200\n",
-      "{'Server': 'nginx/1.10.3', 'Date': 'Wed, 26 Jun 2019 14:30:37 GMT', 'Content-Type': 'application/json', 'Content-Length': '519', 'Connection': 'keep-alive', 'Via': '1.1 vegur'}\n",
+      "{'Server': 'nginx/1.10.3', 'Date': 'Wed, 26 Jun 2019 14:32:05 GMT', 'Content-Type': 'application/json', 'Content-Length': '519', 'Connection': 'keep-alive', 'Via': '1.1 vegur'}\n",
       "{\n",
       "  \"message\": \"success\", \n",
       "  \"request\": {\n",
@@ -240,9 +240,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "{'people': [{'craft': 'ISS', 'name': 'Alexey Ovchinin'}, {'craft': 'ISS', 'name': 'Nick Hague'}, {'craft': 'ISS', 'name': 'Christina Koch'}], 'number': 3, 'message': 'success'}\n"
+     ]
+    }
+   ],
    "source": [
     "# Check the API and interpret your results - when will ISS pass over NEW York next ?\n",
     "# Get the response from the API endpoint.\n",
